--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Login</h1>
+    <!-- <h1>Login</h1>
     <form method="POST">
         <label for="username">Username:</label>
         <input type="text" name="username" required>
@@ -16,7 +16,36 @@
         <input type="password" name="password" required>
         <br>
         <button type="submit">Login</button>
-    </form>
-    <p>Belum punya akun? <a href="{{ url_for('register') }}">Daftar di sini</a></p>
+    </form> -->
+
+    <div class="container">
+        <div class="screen">
+            <div class="screen__content">
+                <form method="POST" class="login">
+                    <div class="login__field">
+                        <i class="login__icon fas fa-user"></i>
+                        <input for="username" type="text" class="login__input" placeholder="Username">
+                    </div>
+                    <div class="login__field">
+                        <i class="login__icon fas fa-lock"></i>
+                        <input type="password" class="login__input" placeholder="Password">
+                    </div>
+                    <button class="button login__submit" type="submit">
+                        <span class="button__text">Log In Now</span>
+                        <i class="button__icon fas fa-chevron-right"></i>
+                    </button>			
+                </form>
+                <div class="social-login">
+                    <p style="margin-top: 20px;">Belum punya akun? <a href="{{ url_for('register') }}"><span>Daftar di sini</span></p>	
+                </div>
+            </div>
+            <div class="screen__background">
+                <span class="screen__background__shape screen__background__shape4"></span>
+                <span class="screen__background__shape screen__background__shape3"></span>		
+                <span class="screen__background__shape screen__background__shape2"></span>
+                <span class="screen__background__shape screen__background__shape1"></span>
+            </div>		
+        </div>
+    </div>
 </body>
 </html>
